@@ -1,13 +1,10 @@
-uim 1.4.0-beta Release Note
-===========================
+uim 1.4.0 Release Note
+======================
 
 About This Release
 ------------------
 
-This distribution of uim 1.4.0-beta is a preview release for testing
-purpose. Since it may contain serious unknown problems, it should not be
-used for important work. For such situations, use our latest stable
-release uim 1.3.1.
+This distribution of uim 1.4.0 is latest stable release of uim.
 
 This release is for internal improvement. The non-standards-conformant
 Scheme interpreter of libuim has been replaced with newly developed
@@ -24,8 +21,12 @@ Bug tracking system: http://bugs.freedesktop.org/
 What's New
 ----------
 
+  - Fix the license terms of replace/strsep.c and replace/setenv.c
+    accidencially mis-modified in r790. I apologize the careless treatment of
+    the license
+
   - The modified version of SIOD interpreter has been replaced with
-    SigScheme 0.7.3
+    SigScheme 0.7.4
 
   - [CRITICAL] Fix GC crash on SPARC, IA-64, m68k, and possibly MIPS, Alpha, by
     introduction of libgcroots
@@ -63,7 +64,7 @@ Roadmap
 
   - uim 1.5.0
 
-    Release for internal simplification. No user-visible changes.
+    Release for internal simplification. Few user-visible changes.
 
     The complicated C part of uim which prevents extensions, design
     improvements and automated input method tests will be turned into
